# CSCN_portal

./: .env  .gitignore  CSCN.iss  CSCN.spec  CSCN_portal.spec  CSCN_x86.iss  CSCN_x86.spec  DEFAULT_LOGINS.txt  LICENSE  README.md  alembic.ini  build.ps1  build32.ps1  build_installer.ps1  launcher.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  web_main.py
api/: __init__.py  app.py  config_api.py  deps.py  excel_io.py  middleware.py  permissions.py  responses.py  service_factory.py
api/routers/: __init__.py  admin.py  auth.py  backup.py  dashboard.py  documents.py  financial.py  hr.py  lookups.py  partnerships.py  records.py  remote.py  reports.py  settings.py  standards.py  training.py
application/: context.py
application/dto/: user_dto.py
application/services/: audit_service.py  auth_service.py  backup_service.py  document_service.py  financial_service.py  firewall.py  hr_service.py  partnership_service.py  peer_client.py  peer_server.py  permission_service.py  quality_service.py  record_service.py  report_engine.py  training_service.py
application/validators/: validators.py
config/: logging_config.py  settings.py
database/: base.py  engine.py  session.py
database/migrations/: env.py  script.py.mako
domain/entities/: __init__.py  attachment.py  audit.py  document.py  employee.py  financial.py  form.py  (+8 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: reset_passwords.py
tests/: conftest.py
tools/: make_app_icon.py
ui/: app.py  main_window.py  permissions.py  prefs.py
(+127 files in other folders)
