[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CSCN_portal"
version = "1.1.0"
description = "Health and Nursing Skills Enhancement Center Management System"
authors = [
    {name = "Eslam Gamal Ghazi"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5.0",
    "qtawesome>=1.3.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "bcrypt>=4.0.0",
    "reportlab>=4.0.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.6.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.0.0",
    "Jinja2>=3.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "apscheduler>=3.0.0",
    "Pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "pyinstaller>=6.0.0"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
